#########################################################################
# LIBRARY SECTION
#########################################################################
# this is librairy that is part of main executable.  it's name is used for all
# of the other Makefile.am variables
noinst_LIBRARIES	= libKernel.a

# the application source, library search path, and link libraries
libKernel_a_SOURCES = app.cpp arrows.cpp attr.cpp attraggl.cpp attrappl.cpp attrbev.cpp \
	attrmap.cpp attrmgr.cpp basedoc.cpp beveler.cpp bevtrap.cpp biasgain.cpp \
	bitfilt.cpp bitmap.cpp bitmapcachekey.cpp blndhelp.cpp blobs.cpp \
	bmpcomp.cpp bmplist.cpp bmapprev.cpp bmpsrc.cpp brpress.cpp brshattr.cpp brshbeca.cpp \
	brshcomp.cpp brshdata.cpp brushref.cpp bshadow.cpp cache.cpp cachfifo.cpp \
	camfiltr.cpp capturemanager.cpp ccbhfile.cpp ccbuffil.cpp \
	ccfile.cpp ccpanose.cpp chapter.cpp clipattr.cpp cnamecol.cpp colclist.cpp \
	colcomp.cpp colcontx.cpp collist.cpp colormgr.cpp colourix.cpp colplate.cpp \
	coord.cpp cutop.cpp cxfellp.cpp cxfile.cpp cxflists.cpp cxfmap.cpp \
	cxfnbmp.cpp cxfpoly.cpp cxfrec.cpp cxfrech.cpp cxfrect.cpp cxfrgshp.cpp \
	cxftext.cpp cxftfile.cpp cxftrans.cpp dbugtree.cpp dialogop.cpp doccolor.cpp \
	doccomp.cpp doccoord.cpp docrect.cpp document.cpp docview.cpp dumbnode.cpp \
	cpp exphint.cpp extender.cpp fillattr.cpp fillramp.cpp \
	fillval.cpp filters.cpp filtimag.cpp filtimop.cpp filtrmgr.cpp fontcomp.cpp fontlist.cpp \
	fontman.cpp fracfill.cpp fthrattr.cpp gcache.cpp fntcache.cpp textacts.cpp \
	fttyplis.cpp gadget.cpp gblend.cpp genv.cpp gla.cpp gmould.cpp \
	grid.cpp group.cpp guides.cpp gwinding.cpp hittest.cpp htmlexp.cpp hotkeys.cpp \
	impbmp.cpp impcol.cpp impstr.cpp impexpop.cpp infocomp.cpp insertnd.cpp invalid.cpp \
	isetattr.cpp layer.cpp lineattr.cpp linecomp.cpp linedef.cpp list.cpp listitem.cpp \
	main.cpp main1.cpp main2.cpp main3.cpp matrix.cpp modlist.cpp module.cpp \
	moldedit.cpp moldenv.cpp moldpers.cpp moldshap.cpp native.cpp nativeop.cpp \
	nbevcont.cpp ncntrcnt.cpp ndbldpth.cpp ndbrshmk.cpp ndbrshpt.cpp ndclpcnt.cpp \
	ndmldgrp.cpp ndmldpth.cpp ndoptmz.cpp ngitem.cpp ngiter.cpp ngprop.cpp \
	ngsentry.cpp node.cpp nodeabmp.cpp nodeattr.cpp nodebev.cpp nodebldr.cpp \
	nodeblnd.cpp nodebmp.cpp nodebrsh.cpp nodeclip.cpp nodecntr.cpp nodecomp.cpp \
	nodecont.cpp nodedoc.cpp nodeelip.cpp nodeliveeffect.cpp nodemldr.cpp nodemold.cpp \
	nodepath.cpp nodepostpro.cpp noderect.cpp noderend.cpp nodershp.cpp nodeset.cpp \
	nodeshad.cpp nodeshap.cpp nodetext.cpp nodetxtl.cpp nodetxts.cpp noise1.cpp \
	noisebas.cpp noisef.cpp npaper.cpp objcache.cpp objchge.cpp objreg.cpp \
	offattr.cpp opdesc.cpp opgrad.cpp ophist.cpp ops.cpp page.cpp pathedit.cpp \
	pathops.cpp pathpcs.cpp pathproc.cpp paths.cpp pathstrk.cpp pathtrap.cpp \
	pathutil.cpp pbecomea.cpp ppairbsh.cpp ppbevel.cpp ppbrush.cpp ppstroke.cpp \
	ppvecstr.cpp prefs.cpp princomp.cpp prnmkcom.cpp pump.cpp quality.cpp \
	range.cpp rechattr.cpp rechbmp.cpp rechbmpp.cpp rechcol.cpp rechcomp.cpp \
	rechdoc.cpp rechellp.cpp rechinfo.cpp rechpoly.cpp rechprnt.cpp rechrect.cpp \
	rechrshp.cpp rechsmth.cpp rechtext.cpp rechunit.cpp rsmooth.cpp samplist.cpp \
	scunit.cpp selop.cpp selstate.cpp shapeops.cpp slicehelper.cpp snap.cpp \
	spread.cpp stack.cpp strkcomp.cpp styles.cpp tmpltarg.cpp tmpltatr.cpp \
	tool.cpp toollist.cpp tranform.cpp trans2d.cpp transop.cpp txtattr.cpp \
	uielem.cpp undoop.cpp unitcomp.cpp units.cpp userattr.cpp usercord.cpp \
	userrect.cpp valfunc.cpp view.cpp viewcomp.cpp webaddr.cpp webattr.cpp \
	gradtbl.cpp rndrgn.cpp rrcaps.cpp webflags.cpp wrkcoord.cpp xmatrix.cpp \
	ziftrees.cpp zinflate.cpp zstream.cpp bitmapcache.cpp rgnlist.cpp fraclist.cpp \
	rndstack.cpp scanrr.cpp jpgermgr.cpp menuops.cpp strkattr.cpp csrstack.cpp \
	opdragbx.cpp qualops.cpp pngfuncs.cpp imjpeg.cpp jpgsrc.cpp blobby.cpp bars.cpp \
	opnudge.cpp sgallery.cpp appprefs.cpp stdbars.cpp menuitem.cpp contmenu.cpp \
	ccmaths.cpp f16spec.cpp fix24.cpp fixed16.cpp fixed24.cpp fixed.cpp xlong.cpp \
	GDrawIntf.cpp selall.cpp effects_stack.cpp clipint.cpp optsgrid.cpp \
	opsmpshp.cpp snapops.cpp oppull.cpp fitcurve.cpp cpyact.cpp groupops.cpp \
	zordops.cpp fillndge.cpp pathndge.cpp opbreak.cpp cmdctrl.cpp opsmooth.cpp \
	combshps.cpp mkshapes.cpp mkstroke.cpp mrhbits.cpp ndmldink.cpp opfeathr.cpp \
	linwthop.cpp sgmenu.cpp draginfo.cpp filelist.cpp statline.cpp pressure.cpp \
	penedit.cpp aligndlg.cpp exjpeg.cpp aboutdlg.cpp sgdrag.cpp sginit.cpp sgtree.cpp \
	bmpprefs.cpp expbmp.cpp expcol.cpp prvwflt.cpp bmpexdoc.cpp webop.cpp \
	zdeflate.cpp jpgdest.cpp webparam.cpp bmpalint.cpp zdftrees.cpp animparams.cpp \
	sglayer.cpp layermgr.cpp layergal.cpp backgrnd.cpp viewmenu.cpp renddlg.cpp \
	sgcolour.cpp sgbitmap.cpp bmpsdlg.cpp ngcore.cpp ngitem.cpp ngscan.cpp \
	ngsentry.cpp ngsetop.cpp ngdialog.cpp property.cpp \
	optsedit.cpp optsmisc.cpp optspntr.cpp optstune.cpp optsview.cpp optsgrid.cpp \
	optspage.cpp optsundo.cpp optsscal.cpp optsunit.cpp pagesize.cpp radio.cpp \
	xpfcaps.cpp xpfilter.cpp xpfrgn.cpp layerprp.cpp prpsgds.cpp prpslyrs.cpp \
	aprps.cpp prevwdlg.cpp frameops.cpp

AM_CXXFLAGS = $(XARAFLAGS)
