#########################################################################
# LIBRARY SECTION
#########################################################################
# this is the program that gets installed.  it's name is used for all
# of the other Makefile.am variables
noinst_LIBRARIES	= libTools.a

# the application source, library search path, and link libraries
libTools_a_SOURCES = opdrbrsh.cpp zoomtool.cpp zoomops.cpp blndtool.cpp opbevel.cpp \
	dragtool.cpp viewmod.cpp selector.cpp selinfo.cpp tranlate.cpp oprotate.cpp \
	opscale.cpp opshear.cpp opsquash.cpp opflip.cpp pushtool.cpp \
	rectangl.cpp regshape.cpp eliptool.cpp oprshape.cpp filltool.cpp beztool.cpp \
	opbezier.cpp opshadow.cpp shadtool.cpp shadinfo.cpp freeinfo.cpp opfree.cpp opdrbrsh.cpp \
	freehand.cpp opretro.cpp moldtool.cpp bevinfo.cpp bevtool.cpp cntrtool.cpp opcntr.cpp \
	pentool.cpp texttool.cpp textinfo.cpp textops.cpp
AM_CXXFLAGS = $(XARAFLAGS)
